Cambio de version para corregir error de data path y browser, login con google abierto, base para restaurants y usuarios

--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "MavericsRestaurants": {
+    "maverics-restaurants": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/MavericsRestaurants",
+            "outputPath": "dist/maverics-restaurants",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -23,10 +23,10 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": [],
-            "es5BrowserSupport": true
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -58,18 +58,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "MavericsRestaurants:build"
+            "browserTarget": "maverics-restaurants:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "MavericsRestaurants:build:production"
+              "browserTarget": "maverics-restaurants:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "MavericsRestaurants:build"
+            "browserTarget": "maverics-restaurants:build"
           }
         },
         "test": {
@@ -103,7 +103,7 @@
         }
       }
     },
-    "MavericsRestaurants-e2e": {
+    "maverics-restaurants-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -112,11 +112,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "MavericsRestaurants:serve"
+            "devServerTarget": "maverics-restaurants:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "MavericsRestaurants:serve:production"
+              "devServerTarget": "maverics-restaurants:serve:production"
             }
           }
         },
@@ -132,5 +132,5 @@
       }
     }
   },
-  "defaultProject": "MavericsRestaurants"
+  "defaultProject": "maverics-restaurants"
 }
