--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animation": "^4.0.0-beta.8",
     "@angular/animations": "~7.0.0",
     "@angular/common": "~7.0.0",
-    "@angular/compiler": "~7.2.4",
+    "@angular/compiler": "~7.0.0",
     "@angular/core": "~7.0.0",
     "@angular/fire": "^5.1.1",
     "@angular/forms": "~7.0.0",
@@ -24,6 +25,7 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "firebase": "^5.7.0",
+    "ngx-toastr": "^9.1.2",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
